# spatio-temporal-anamoly-detection

./: README.md
DRDO-sample/: .gitignore  README.md  pyproject.toml  requirements.txt
DRDO-sample/.github/: copilot-instructions.md
DRDO-sample/scripts/: evaluate.py  preprocess.py  train.py
DRDO-sample/src/: main.py
DRDO-sample/src/anomaly/: scoring.py
DRDO-sample/src/database/: chromadb_store.py
DRDO-sample/src/detection/: yolo_obb.py
DRDO-sample/src/semantic/: clip_embeddings.py
DRDO-sample/src/tracking/: bytetrack.py
DRDO-sample/src/visualization/: dashboard.py
DRDO-sample/tests/: test_detection.py
stad_real_dataset/: README.md  requirements.txt
stad_real_dataset/data/highres_scenes/678822c6ae/: meta.json
stad_real_dataset/data/highres_scenes/9e752f465e/: meta.json
stad_real_dataset/models/: anomaly.py  detector.py
stad_real_dataset/utils/: config.py
